# dutchbay_unified_project

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  qc_report.json
.github/workflows/: python-app.yml
dutchbay_v13/: cli.py  optimization.py  scenario_runner.py  schema.py
dutchbay_v13/finance/: __init__.py  cashflow.py
inputs/scenarios/: dutchbay_lendercase_2025Q4.yaml
tests/: test_regression_golden.py
tests/property/: test_properties.py
