[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dutchbay-v13"
version = "0.1.0"
description = "Dutch Bay financial model toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Dutch Bay" }]

# Runtime deps only; keep heavy tools in dev extra
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  # testing
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",

  # typing/lint/format (pinned for reproducibility)
  "mypy>=1.5",
  "flake8==7.1.0",
  "flake8-bugbear==24.2.8",
  "flake8-comprehensions==3.14.0",
  "flake8-pie==0.16.0",
  "black==24.8.0",
  "isort==5.13.2",
  "pre-commit>=3.5",
  "types-PyYAML>=6.0",

  # optional web/report stack used by API/report modes
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "PyJWT>=2.8",
  "typer>=0.12",
  "reportlab>=4.0",
  # WeasyPrint isn’t supported on Windows runners; keep optional
  "weasyprint>=60.0; platform_system!='Windows'",
]

[tool.setuptools]
# Explicit! Avoid auto-discovery picking up data dirs like inputs/
packages = ["dutchbay_v13"]

# If you ship templates/static files, uncomment and adapt:
# [tool.setuptools.package-data]
# "dutchbay_v13" = ["templates/**/*", "static/**/*"]
